// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<svg
  className="checkbox-icon"
  height={24}
  viewBox="0 0 16 16"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="checkbox-icon__rect"
    d="M2.223 4.741a2.968 2.968 0 0 1 2.518-2.518 23.042 23.042 0 0 1 6.518 0 2.968 2.968 0 0 1 2.518 2.518 23.049 23.049 0 0 1 0 6.518 2.968 2.968 0 0 1-2.518 2.518 23.049 23.049 0 0 1-6.518 0 2.968 2.968 0 0 1-2.518-2.518 23.042 23.042 0 0 1 0-6.518Z"
  />
  <path
    className="checkbox-icon__check"
    d="m5 7.8 2.3 2.3 4.271-4.6"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
</svg>
`;

exports[`Is checked 1`] = `
<svg
  className="checkbox-icon"
  height={24}
  viewBox="0 0 16 16"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="checkbox-icon__rect"
    d="M2.223 4.741a2.968 2.968 0 0 1 2.518-2.518 23.042 23.042 0 0 1 6.518 0 2.968 2.968 0 0 1 2.518 2.518 23.049 23.049 0 0 1 0 6.518 2.968 2.968 0 0 1-2.518 2.518 23.049 23.049 0 0 1-6.518 0 2.968 2.968 0 0 1-2.518-2.518 23.042 23.042 0 0 1 0-6.518Z"
  />
  <path
    className="checkbox-icon__check"
    d="m5 7.8 2.3 2.3 4.271-4.6"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
</svg>
`;

exports[`Is disabled 1`] = `
<svg
  className="checkbox-icon"
  height={24}
  viewBox="0 0 16 16"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="checkbox-icon__rect"
    d="M2.223 4.741a2.968 2.968 0 0 1 2.518-2.518 23.042 23.042 0 0 1 6.518 0 2.968 2.968 0 0 1 2.518 2.518 23.049 23.049 0 0 1 0 6.518 2.968 2.968 0 0 1-2.518 2.518 23.049 23.049 0 0 1-6.518 0 2.968 2.968 0 0 1-2.518-2.518 23.042 23.042 0 0 1 0-6.518Z"
  />
  <path
    className="checkbox-icon__check"
    d="m5 7.8 2.3 2.3 4.271-4.6"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
  <path
    className="checkbox-icon__disabled"
    d="m3 3 10 10"
  />
</svg>
`;

exports[`Is indeterminate 1`] = `
<svg
  className="checkbox-icon"
  height={24}
  viewBox="0 0 16 16"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="checkbox-icon__rect"
    d="M2.223 4.741a2.968 2.968 0 0 1 2.518-2.518 23.042 23.042 0 0 1 6.518 0 2.968 2.968 0 0 1 2.518 2.518 23.049 23.049 0 0 1 0 6.518 2.968 2.968 0 0 1-2.518 2.518 23.049 23.049 0 0 1-6.518 0 2.968 2.968 0 0 1-2.518-2.518 23.042 23.042 0 0 1 0-6.518Z"
  />
  <rect
    className="checkbox-icon__indeterminate"
    height="2"
    rx="1"
    width="6"
    x="5"
    y="7"
  />
  <path
    className="checkbox-icon__check"
    d="m5 7.8 2.3 2.3 4.271-4.6"
    strokeLinecap="round"
    strokeLinejoin="round"
  />
</svg>
`;
